--- a/SQL_COVID19_2023/README
+++ b/SQL_COVID19_2023/README
@@ -1,3 +1,8 @@
-Covid-19 Worldwide
+-- Covid-19 Worldwide
 
 Link to Dataset: https://ourworldindata.org/covid-deaths
+
+Link to Tableau Viz: https://public.tableau.com/views/Covid19-Updated2023/Dashboard1?:language=en-GB&:display_count=n&:origin=viz_share_link
+
+
+
